Updates and fixes to exportig swarm metrics

--- a/docker-swarm-templates/docker-compose.prometheus-edge-relay.yml
+++ b/docker-swarm-templates/docker-compose.prometheus-edge-relay.yml
@@ -126,8 +126,8 @@ services:
       timeout: 10s
       retries: 5
     entrypoint:
-      - "/bin/sh"
-      - "-c"
+      - '/bin/sh'
+      - '-c'
       - |
         set -eu
 
